--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 
             <section class="section">
                 <h2>🧑 Personal Information</h2>
-                <p><strong>Name:</strong> Alex Johnson</p>
+                <p><strong>Name:</strong> Karthik</p>
                 <p><strong>Address:</strong> 123 Tech Avenue, Silicon City, CA 90001</p>
                 <p><strong>Phone:</strong> (555) 123-4567</p>
                 <p><strong>Email:</strong> alex.johnson@example.com</p>
